--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
 <!-- NAV BAR -->
 
 	<div class="fixed">
-		<nav class="top-bar" data-topbar>
+		<nav class="top-bar l-nav" data-topbar>
 		  <ul class="title-area">
 		    <li class="name">
-		      <a class="logo-karma" href="index.html"></a>
+		      <a class="nav__logo" href="index.html"></a>
 		    </li>
 		    <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
 		  </ul>
 		  <section class="top-bar-section">		    
 				<!-- Left Nav Section -->
-		    <ul class="left">
-		      <li class="menu--item-bold"><a href="share">Share</a></li>
-		      <li class="menu--item-bold"><a href="donate.html">Build</a></li>
-		      <li class="menu--item-bold"><a href="participate.html">Advise</a></li>
-		      <li class="menu--item-bold"><a href="learn.html">Give</a></li>					
+		    <ul class="left nav__left">
+		      <li class="menu__item"><a href="share">Share</a></li>
+		      <li class="menu__item"><a href="donate.html">Build</a></li>
+		      <li class="menu__item"><a href="participate.html">Advise</a></li>
+		      <li class="menu__item"><a href="learn.html">Give</a></li>					
 		    </ul>
 		    <!-- Right Nav Section -->
-		    <ul class="right">
-		      <li class="menu--item"><a href="explore.html">Projects</a></li>
-		      <li class="menu--item"><a href="blog.html">Team</a></li>
-		      <li class="menu--item"><a href="explore.html">About</a></li>
-		      <li class="menu--item"><a href="blog.html">Contact</a></li>					
+		    <ul class="right nav__right">
+		      <li class="menu__item"><a href="explore.html">Projects</a></li>
+		      <li class="menu__item"><a href="blog.html">Team</a></li>
+		      <li class="menu__item"><a href="explore.html">About</a></li>
+		      <li class="menu__item"><a href="blog.html">Contact</a></li>					
 		    </ul>
 		  </section>
 		</nav>
