--- a/index.html
+++ b/index.html
@@ -39,6 +39,192 @@
 	</div>
 
 
+  <div class="row row--header">
+    <div class="large-8 large-offset-2 columns">
+			<h1>
+			We are pioneers of <span class="text--bold">Transformation Design</span>&mdash;integrating strategy, leadership, and design to achieve sustainable outcomes for complex issues
+			</h1>
+		</div>
+	</div>
+	<div class="row">
+		<div class="large-4 large-offset-4 medium-6 medium-offset-3 columns">
+			<a href="#" class="button expand radius"><span class="text--bold">Co-Create</span> with us</a>
+		</div>
+	</div>	
+
+  <section> <!-- BEGIN TILES -->
+		
+		<div class="tile-single">
+			<a href="#">
+				<div class="tile__image-wrap">
+					<img class="tile__image" src="images/share-tile01.jpg" />
+					<div class="tile__label-wrap">
+						<div class="tile__label-inner">
+							<div class="tile__label-title">
+								The AG Way
+							</div>
+							<div class="tile__label-caption">
+								How can you build an authentic brand based on who you aspire to be?
+							</div>							
+						</div>
+					</div>
+				</div>
+			</a>
+		</div>
+
+		<div class="tile-single">
+			<a href="#">
+				<div class="tile__image-wrap">
+					<img class="tile__image" src="images/share-tile02.jpg" />
+					<div class="tile__label-wrap">
+						<div class="tile__label-inner">
+							<div class="tile__label-title">
+								Stop Branding
+							</div>
+							<div class="tile__label-caption">
+								How can you build an authentic brand based on who you aspire to be?
+							</div>							
+						</div>
+					</div>
+				</div>
+			</a>
+		</div>
+
+		<div class="tile-single">
+			<a href="#">
+				<div class="tile__image-wrap">
+					<img class="tile__image" src="images/share-tile01.jpg" />
+					<div class="tile__label-wrap">
+						<div class="tile__label-inner">
+							<div class="tile__label-title">
+								Why Change Management May Not Always Work
+							</div>
+							<div class="tile__label-caption">
+								How can you build an authentic brand based on who you aspire to be?
+							</div>							
+						</div>
+					</div>
+				</div>
+			</a>
+		</div>
+
+		<div class="tile-single">
+			<a href="#">
+				<div class="tile__image-wrap">
+					<img class="tile__image" src="images/share-tile02.jpg" />
+					<div class="tile__label-wrap">
+						<div class="tile__label-inner">
+							<div class="tile__label-title">
+								KISS
+							</div>
+							<div class="tile__label-caption">
+								How can you build an authentic brand based on who you aspire to be?
+							</div>
+						</div>
+					</div>
+				</div>
+			</a>
+		</div>						
+
+		<div class="tile-single">
+			<a href="#">
+				<div class="tile__image-wrap">
+					<img class="tile__image" src="images/share-tile01.jpg" />
+					<div class="tile__label-wrap">
+						<div class="tile__label-inner">
+							<div class="tile__label-title">
+								The AG Way
+							</div>
+							<div class="tile__label-caption">
+								How can you build an authentic brand based on who you aspire to be?
+							</div>							
+						</div>
+					</div>
+				</div>
+			</a>
+		</div>
+
+		<div class="tile-single">
+			<a href="#">
+				<div class="tile__image-wrap">
+					<img class="tile__image" src="images/share-tile02.jpg" />
+					<div class="tile__label-wrap">
+						<div class="tile__label-inner">
+							<div class="tile__label-title">
+								Stop Branding
+							</div>
+							<div class="tile__label-caption">
+								How can you build an authentic brand based on who you aspire to be?
+							</div>							
+						</div>
+					</div>
+				</div>
+			</a>
+		</div>
+
+		<div class="tile-single">
+			<a href="#">
+				<div class="tile__image-wrap">
+					<img class="tile__image" src="images/share-tile01.jpg" />
+					<div class="tile__label-wrap">
+						<div class="tile__label-inner">
+							<div class="tile__label-title">
+								Why Change Management May Not Always Work
+							</div>
+							<div class="tile__label-caption">
+								How can you build an authentic brand based on who you aspire to be?
+							</div>							
+						</div>
+					</div>
+				</div>
+			</a>
+		</div>
+
+		<div class="tile-single">
+			<a href="#">
+				<div class="tile__image-wrap">
+					<img class="tile__image" src="images/share-tile02.jpg" />
+					<div class="tile__label-wrap">
+						<div class="tile__label-inner">
+							<div class="tile__label-title">
+								KISS
+							</div>
+							<div class="tile__label-caption">
+								How can you build an authentic brand based on who you aspire to be?
+							</div>
+						</div>
+					</div>
+				</div>
+			</a>
+		</div>							
+		
+	</section> <!-- END TILES -->
+	
+	<section> <!-- BEGIN NEWSLETTER SIGN-UP -->
+		
+		<div class="row row--header">
+	    <div class="large-8 large-offset-2 columns">
+				<h1>
+				Keep up to date on the latest in <span class="text--bold">Transformation Design</span>&mdash;Leadership, Culture, Design &amp; Innovation
+				</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="large-8 large-offset-2 columns">
+	      <div class="row collapse postfix-radius">
+	        <div class="small-8 columns">
+	          <input type="text" placeholder="Hex Value">
+	        </div>
+	        <div class="small-4 columns">
+	          <a href="#" class="button postfix">Get Newsletter</a>
+	        </div>
+	      </div>
+			</div>
+		</div>
+
+	
+	</section> <!-- END NEWSLETTER SIGN-UP -->
+
     <div class="row">
       <div class="large-12 columns">
         <div class="panel">
@@ -69,35 +255,6 @@
           <div class="large-12 columns">
             <div class="callout panel">
               <p><strong>This is a twelve column section in a row.</strong> Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="large-6 medium-6 columns">
-            <div class="callout panel">
-              <p>Six columns</p>
-            </div>
-          </div>
-          <div class="large-6 medium-6 columns">
-            <div class="callout panel">
-              <p>Six columns</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="large-4 medium-4 small-4 columns">
-            <div class="callout panel">
-              <p>Four columns</p>
-            </div>
-          </div>
-          <div class="large-4 medium-4 small-4 columns">
-            <div class="callout panel">
-              <p>Four columns</p>
-            </div>
-          </div>
-          <div class="large-4 medium-4 small-4 columns">
-            <div class="callout panel">
-              <p>Four columns</p>
             </div>
           </div>
         </div>
