Footer first draft
Still need to add social media icons

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -39,7 +39,7 @@
 	</div>
 
 
-  <div class="row row--header">
+  <div class="row row--header row--first">
     <div class="large-8 large-offset-2 columns">
 			<h1>
 			We are pioneers of <span class="text--bold">Transformation Design</span>&mdash;integrating strategy, leadership, and design to achieve sustainable outcomes for complex issues
@@ -226,6 +226,44 @@
 	</section> <!-- END NEWSLETTER SIGN-UP -->
 
 	<footer>
+		<div class="row">
+			<div class="medium-6 columns">
+				<div class="footer__locations">
+					<span class="text--bold">Singapore</span><br />
+					51 waterloo st #03-06<br />
+					singapore 187969<br />
+					<br />
+					<span class="text--bold">USA</span><br />
+					445 s figueroa #2600<br />
+					los Angeles ca 90071<br />
+					<br />
+				</div>
+			</div>
+			<div class="medium-6 columns">
+				<div class="footer__contact">
+					<a class="link--contact" href="contact@awakengroup.com">contact@awakengroup.com</a><br />
+					Social Media Links
+				</div>
+			</div>			
+		</div>
+		
+		<div class="row">
+			<div class="large-12 columns">
+				<ul>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Terms</a></li>
+					<li><a href="#">Privacy</a></li>
+					<li><a href="#">Press / Media</a></li>
+					<li><a href="#">Contact Us</a></li>					
+				</ul>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="large-12 columns">
+				&copy; 2014 Awaken Group. All rights reserved.
+			</div>
+		</div>
 		
 	</footer>
    
