--- a/index.html
+++ b/index.html
@@ -240,9 +240,13 @@
 				</div>
 			</div>
 			<div class="medium-6 columns">
-				<div class="footer__contact">
-					<a class="link--contact" href="contact@awakengroup.com">contact@awakengroup.com</a><br />
-					Social Media Links
+				<div class="footer__contact-wrap">
+					<div class="footer__contact">
+						<a class="link--contact" href="contact@awakengroup.com">contact@awakengroup.com</a><br />
+						<a href="">facebook</a> / 
+						<a href="">twitter</a> / 
+						<a href="">linkedin</a>
+					</div>
 				</div>
 			</div>			
 		</div>
