Updated footer formatting

--- a/index.html
+++ b/index.html
@@ -227,19 +227,28 @@
 
 	<footer>
 		<div class="row">
-			<div class="medium-6 columns">
-				<div class="footer__locations">
-					<span class="text--bold">Singapore</span><br />
-					51 waterloo st #03-06<br />
-					singapore 187969<br />
-					<br />
-					<span class="text--bold">USA</span><br />
-					445 s figueroa #2600<br />
-					los Angeles ca 90071<br />
-					<br />
+				<div class="small-6 large-3 columns">
+					<div class="footer__locations">
+						<span class="text--bold">Singapore</span><br />
+						51 Waterloo St #03-06<br />
+						Singapore 187969<br />
+						<br />
+						<span class="text--bold">USA</span><br />
+						445 S Figueroa #2600<br />
+						Los Angeles CA 90071<br />
+					</div>
 				</div>
-			</div>
-			<div class="medium-6 columns">
+				<div class="small-6 large-3 columns">
+					<div class="footer__links">
+						<a href="#">About Us</a><br />
+						<a href="#">Contact Us</a><br />
+						<a href="#">Press / Media</a><br />
+						<br />
+						<a href="#">Terms of Use</a><br />
+						<a href="#">Privacy</a>
+					</div>
+				</div>	
+				<div class="small-12 large-6 columns">
 				<div class="footer__contact-wrap">
 					<div class="footer__contact">
 						<a class="link--contact" href="contact@awakengroup.com">contact@awakengroup.com</a><br />
@@ -251,17 +260,6 @@
 			</div>			
 		</div>
 		
-		<div class="row">
-			<div class="large-12 columns">
-				<ul>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Terms</a></li>
-					<li><a href="#">Privacy</a></li>
-					<li><a href="#">Press / Media</a></li>
-					<li><a href="#">Contact Us</a></li>					
-				</ul>
-			</div>
-		</div>
 		
 		<div class="row">
 			<div class="large-12 columns">
