Added max-width wrap for tiles

--- a/index.html
+++ b/index.html
@@ -53,151 +53,153 @@
 	</div>	
 
   <section class="clearfix"> <!-- BEGIN TILES -->
-		
-		<div class="tile-single">
-			<a href="#">
-				<div class="tile__image-wrap">
-					<img class="tile__image" src="images/share-tile01.jpg" />
-					<div class="tile__label-wrap">
-						<div class="tile__label-inner">
-							<div class="tile__label-title">
-								The AG Way
+		<div class="l-tiles">
+			
+			<div class="tile-single">
+				<a href="#">
+					<div class="tile__image-wrap">
+						<img class="tile__image" src="images/share-tile01.jpg" />
+						<div class="tile__label-wrap">
+							<div class="tile__label-inner">
+								<div class="tile__label-title">
+									The AG Way
+								</div>
+								<div class="tile__label-caption">
+									How can you build an authentic brand based on who you aspire to be?
+								</div>							
 							</div>
-							<div class="tile__label-caption">
-								How can you build an authentic brand based on who you aspire to be?
-							</div>							
 						</div>
 					</div>
-				</div>
-			</a>
+				</a>
+			</div>
+
+			<div class="tile-single">
+				<a href="#">
+					<div class="tile__image-wrap">
+						<img class="tile__image" src="images/share-tile02.jpg" />
+						<div class="tile__label-wrap">
+							<div class="tile__label-inner">
+								<div class="tile__label-title">
+									Stop Branding
+								</div>
+								<div class="tile__label-caption">
+									How can you build an authentic brand based on who you aspire to be?
+								</div>							
+							</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="tile-single">
+				<a href="#">
+					<div class="tile__image-wrap">
+						<img class="tile__image" src="images/share-tile01.jpg" />
+						<div class="tile__label-wrap">
+							<div class="tile__label-inner">
+								<div class="tile__label-title">
+									Why Change Management May Not Always Work
+								</div>
+								<div class="tile__label-caption">
+									How can you build an authentic brand based on who you aspire to be?
+								</div>							
+							</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="tile-single">
+				<a href="#">
+					<div class="tile__image-wrap">
+						<img class="tile__image" src="images/share-tile02.jpg" />
+						<div class="tile__label-wrap">
+							<div class="tile__label-inner">
+								<div class="tile__label-title">
+									KISS
+								</div>
+								<div class="tile__label-caption">
+									How can you build an authentic brand based on who you aspire to be?
+								</div>
+							</div>
+						</div>
+					</div>
+				</a>
+			</div>						
+
+			<div class="tile-single">
+				<a href="#">
+					<div class="tile__image-wrap">
+						<img class="tile__image" src="images/share-tile01.jpg" />
+						<div class="tile__label-wrap">
+							<div class="tile__label-inner">
+								<div class="tile__label-title">
+									The AG Way
+								</div>
+								<div class="tile__label-caption">
+									How can you build an authentic brand based on who you aspire to be?
+								</div>							
+							</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="tile-single">
+				<a href="#">
+					<div class="tile__image-wrap">
+						<img class="tile__image" src="images/share-tile02.jpg" />
+						<div class="tile__label-wrap">
+							<div class="tile__label-inner">
+								<div class="tile__label-title">
+									Stop Branding
+								</div>
+								<div class="tile__label-caption">
+									How can you build an authentic brand based on who you aspire to be?
+								</div>							
+							</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="tile-single">
+				<a href="#">
+					<div class="tile__image-wrap">
+						<img class="tile__image" src="images/share-tile01.jpg" />
+						<div class="tile__label-wrap">
+							<div class="tile__label-inner">
+								<div class="tile__label-title">
+									Why Change Management May Not Always Work
+								</div>
+								<div class="tile__label-caption">
+									How can you build an authentic brand based on who you aspire to be?
+								</div>							
+							</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="tile-single">
+				<a href="#">
+					<div class="tile__image-wrap">
+						<img class="tile__image" src="images/share-tile02.jpg" />
+						<div class="tile__label-wrap">
+							<div class="tile__label-inner">
+								<div class="tile__label-title">
+									KISS
+								</div>
+								<div class="tile__label-caption">
+									How can you build an authentic brand based on who you aspire to be?
+								</div>
+							</div>
+						</div>
+					</div>
+				</a>
+			</div>							
+
 		</div>
-
-		<div class="tile-single">
-			<a href="#">
-				<div class="tile__image-wrap">
-					<img class="tile__image" src="images/share-tile02.jpg" />
-					<div class="tile__label-wrap">
-						<div class="tile__label-inner">
-							<div class="tile__label-title">
-								Stop Branding
-							</div>
-							<div class="tile__label-caption">
-								How can you build an authentic brand based on who you aspire to be?
-							</div>							
-						</div>
-					</div>
-				</div>
-			</a>
-		</div>
-
-		<div class="tile-single">
-			<a href="#">
-				<div class="tile__image-wrap">
-					<img class="tile__image" src="images/share-tile01.jpg" />
-					<div class="tile__label-wrap">
-						<div class="tile__label-inner">
-							<div class="tile__label-title">
-								Why Change Management May Not Always Work
-							</div>
-							<div class="tile__label-caption">
-								How can you build an authentic brand based on who you aspire to be?
-							</div>							
-						</div>
-					</div>
-				</div>
-			</a>
-		</div>
-
-		<div class="tile-single">
-			<a href="#">
-				<div class="tile__image-wrap">
-					<img class="tile__image" src="images/share-tile02.jpg" />
-					<div class="tile__label-wrap">
-						<div class="tile__label-inner">
-							<div class="tile__label-title">
-								KISS
-							</div>
-							<div class="tile__label-caption">
-								How can you build an authentic brand based on who you aspire to be?
-							</div>
-						</div>
-					</div>
-				</div>
-			</a>
-		</div>						
-
-		<div class="tile-single">
-			<a href="#">
-				<div class="tile__image-wrap">
-					<img class="tile__image" src="images/share-tile01.jpg" />
-					<div class="tile__label-wrap">
-						<div class="tile__label-inner">
-							<div class="tile__label-title">
-								The AG Way
-							</div>
-							<div class="tile__label-caption">
-								How can you build an authentic brand based on who you aspire to be?
-							</div>							
-						</div>
-					</div>
-				</div>
-			</a>
-		</div>
-
-		<div class="tile-single">
-			<a href="#">
-				<div class="tile__image-wrap">
-					<img class="tile__image" src="images/share-tile02.jpg" />
-					<div class="tile__label-wrap">
-						<div class="tile__label-inner">
-							<div class="tile__label-title">
-								Stop Branding
-							</div>
-							<div class="tile__label-caption">
-								How can you build an authentic brand based on who you aspire to be?
-							</div>							
-						</div>
-					</div>
-				</div>
-			</a>
-		</div>
-
-		<div class="tile-single">
-			<a href="#">
-				<div class="tile__image-wrap">
-					<img class="tile__image" src="images/share-tile01.jpg" />
-					<div class="tile__label-wrap">
-						<div class="tile__label-inner">
-							<div class="tile__label-title">
-								Why Change Management May Not Always Work
-							</div>
-							<div class="tile__label-caption">
-								How can you build an authentic brand based on who you aspire to be?
-							</div>							
-						</div>
-					</div>
-				</div>
-			</a>
-		</div>
-
-		<div class="tile-single">
-			<a href="#">
-				<div class="tile__image-wrap">
-					<img class="tile__image" src="images/share-tile02.jpg" />
-					<div class="tile__label-wrap">
-						<div class="tile__label-inner">
-							<div class="tile__label-title">
-								KISS
-							</div>
-							<div class="tile__label-caption">
-								How can you build an authentic brand based on who you aspire to be?
-							</div>
-						</div>
-					</div>
-				</div>
-			</a>
-		</div>							
-		
 	</section> <!-- END TILES -->
 	
 	<section> <!-- BEGIN NEWSLETTER SIGN-UP -->
